Updated the text

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Lorem Ipsum</h1>
+                <h1>Dare someone</h1>
                 <hr>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut vestibulum leo. Sed ac turpis vel augue vulputate feugiat id vitae orci. Donec velit eros, ullamcorper et varius et, auctor ac dui.</p>
+                <p>Dare a friend to do a weird thing and donate to a charity instead.<br>#dare #donate #haveFun #help</p>
                 <a href="#" class="btn btn-primary btn-xl page-scroll" role="button" data-toggle="modal" data-target="#login-modal">Login | Register</a>
             </div>
         </div>
@@ -107,7 +107,7 @@
                 <input id="login_password" class="form-control" type="password" placeholder="Password" required>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox"> Remember me
+                        <input type="checkbox">Remember me
                     </label>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How it works</h2>
                     <hr class="light">
-                    <p class="text-faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut vestibulum leo. Sed ac turpis vel augue vulputate feugiat id vitae orci. Donec velit eros, ullamcorper et varius et, auctor ac dui.</p>
+                    <p class="text-faded">You challenge someone to fulfill a task. If they succeed you donate to a charity. You both have fun and help an NGO at the same time.</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
@@ -204,28 +204,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                         <h3>1. Challenger issues dare</h3>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-muted">Choose a challenge and send it to a friend.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>2. Challengee accepts / rejects </h3>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h3>2. Challengee accepts/rejects</h3>
+                        <p class="text-muted">The person takes the challenge or rejects it.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>3. Challengee proves the completeness of challenge</h3>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h3>3. Challengee sends proof of completing the challenge</h3>
+                        <p class="text-muted">You confirm whether the challenge was completed or not.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Challenger makes promised donation to challengee's chosen charity</h3>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-muted">Donate to the charity.</p>
                     </div>
                 </div>
             </div>
